# mastermind

./: .gitignore  Game.html  README.md  cswk1.cabal  default.tpl  doc-index.html  doc-index.json  index.html  mastermind.cabal  mastermind.txt  package.yaml  stack.yaml
.github/workflows/: build.yml
bench/: Main.hs
exe/: Main.hs
src/: Game.hs  Game.html  Paths_mastermind.html
test/: Spec.hs
