name:                cswk1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fpclass/cswk1#readme
author:              Michael B. Gale
maintainer:          m.gale@warwick.ac.uk
copyright:           2018 Michael B. Gale
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Game
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5

executable mastermind
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    random >= 1.1,
    cswk1

test-suite cswk1-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    base, cswk1, hspec, random, QuickCheck
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

benchmark cswk1-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Main.hs
  build-depends:
    base, cswk1, criterion
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpclass/cswk1
